[package]
name = "markov"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
bincode   = "1.3.1"
hashbrown = { version = "0.8.2", features = ["serde"] }
log       = "0.4.11"
rand      = "0.7.3"
serde     = { version = "1.0.115", features = ["derive"] }
snap      = "1.0.1"
