[package]
name = "markov"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
bincode   = "1.3.1"
fastrand  = "1.4.0"
hashbrown = { version = "0.9.1", features = ["serde"] }
log       = "0.4.11"
serde     = { version = "1.0.117", features = ["derive"] }
snap      = "1.0.1"

fastrand_ext = { git = "https://github.com/museun/fastrand_ext", rev = "a8a74879f3f5726613c55f44695c05d523de26fd" }
